# sonocarte

./: .gitignore  CMakeLists.txt  README.md  alsa_port.cpp  alsa_port.hpp  audio_file.hpp  audio_port.hpp  conan_init.sh  conanfile.py  player.cpp  player.hpp  sndfile_port.cpp  sndfile_port.hpp  song.hpp  sonocarte.cpp
